<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="16dp"
    android:paddingEnd="8dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <ImageView
        android:id="@+id/item_cover"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_music_note"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/on_bg"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/item_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/on_bg_secondary"
            android:textSize="12sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/item_fav"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/nav_library"
        android:src="@drawable/ic_heart"
        app:tint="@color/heart_red" />

    <ImageButton
        android:id="@+id/item_next"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/nav_search"
        android:src="@drawable/ic_play"
        app:tint="@color/on_bg_secondary" />
</LinearLayout>
